# energy-weather-analysis

./: .env  README.md  pyproject.toml  requirements.txt
config/: config.yaml
dashboards/: app.py  quality_report.py
data/: energy.csv  weather.csv
src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py
tests/: test_pipeline.py
